UI gaps fix: #400 Add visual sync direction line to set cloud sync modal

--- a/frontend/src/app/components/modals/edit-cloud-sync-modal/edit-cloud-sync-modal.less
+++ b/frontend/src/app/components/modals/edit-cloud-sync-modal/edit-cloud-sync-modal.less
@@ -16,14 +16,4 @@
     .freq-unit {
         width: 150px;
     }
-
-    svg-icon {
-        &.left {
-            margin-right: -2px;
-        }
-
-        &.right {
-            margin-left: -2px;
-        }
-    }
 }
